# Umber

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  Umber.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  cmake_install.cmake
Sandbox/src/: Application.cpp
Umber/: CMakeLists.txt  Umber.vcxproj  Umber.vcxproj.filters  cmake_install.cmake
Umber/src/: Constants.cpp  Constants.h  Context.cpp  Context.fwd.h  Context.h  Error.cpp  Error.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Position.cpp  Position.h  Stringable.h  SymbolTable.cpp  SymbolTable.fwd.h  SymbolTable.h  Token.cpp  Token.h  Umber.cpp  Umber.h  Value.cpp  Value.fwd.h  Value.h
Umber/src/errors/: ExpectedCharError.cpp  ExpectedCharError.h  IllegalCharacterError.cpp  IllegalCharacterError.h  InvalidSyntaxError.cpp  InvalidSyntaxError.h  RuntimeError.cpp  RuntimeError.h
Umber/src/nodes/: AccessorNode.cpp  AccessorNode.h  AccessorSetNode.cpp  AccessorSetNode.h  BinOpNode.cpp  BinOpNode.h  BreakNode.cpp  BreakNode.h  CallNode.cpp  CallNode.h  ContinueNode.cpp  ContinueNode.h  DictNode.cpp  DictNode.h  ElseNode.cpp  ElseNode.h  ForNode.cpp  ForNode.h  FunctionDefNode.cpp  FunctionDefNode.h  IfNode.cpp  IfNode.h  ImportNode.cpp  ImportNode.h  ListNode.cpp  ListNode.h  NumberNode.cpp  NumberNode.h  ReturnNode.cpp  ReturnNode.h  StringNode.cpp  StringNode.h  UnaryOpNode.cpp  UnaryOpNode.h  VarAccessNode.cpp  VarAccessNode.h  VarAssignNode.cpp  VarAssignNode.h  VarDeclarationNode.cpp  VarDeclarationNode.h  (+2 more)
Umber/src/result/: ParseResult.cpp  ParseResult.h  RuntimeResult.cpp  RuntimeResult.h
Umber/src/test/: primes.ub
Umber/src/utils/: Utils.cpp  Utils.h
Umber/src/values/: BaseFunctionValue.cpp  BaseFunctionValue.h  BuiltInFunction.cpp  BuiltInFunction.h  DictValue.cpp  DictValue.h  FunctionValue.cpp  FunctionValue.h  ListValue.cpp  ListValue.h  NumberValue.cpp  NumberValue.h  StringValue.cpp  StringValue.h
